[package]
name = "iota-foundries-analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

iota-sdk = { git = "https://github.com/iotaledger/iota-sdk", branch = "develop", features = ["irc_27", "irc_30"]}
